    - added FX sends, these allow to route audio signals to arbitrary audio
      output channels for being processed by external effect processors
      (i.e. jack-rack), the send levels are controllable via arbitrary MIDI
      controllers
    - global (sampler wide) volume can now be controlled at runtime
    - Implemented new, improved notification system

  * MIDI driver:
    - dispatch bank select (MSB and LSB) messages

  * audio driver:
    - the ALSA audio output driver parameters now reflect the correct
      parameter value ranges for the respective selected sound card
      (patch by Till Wimmer, a bit fixed and extended)

  * Gigasampler format engine:
    - if a filter is used and EG2 finishes before EG1, let the voice
      die when EG2 has finished (this fixes a problem with clicks and
      voice starvation for some gigs)
    - playback is no longer disabled during instrument loading
    - all notes playing on a channel that changes its instrument keep
      playing with the old instrument until they get a note off
      command
    - EG fix: a release value of zero could cause noises or crash
    - handle MIDI coarse tuning messages (MIDI RPN #0 MSB #2 LSB)
    - EG fine tuning: when attack is zero the EG starts at a level
      above max sustain level, which means that there is a decay phase
      even if sustain is 100%
    - more EG fixes: the level could sometimes go below zero and cause
      noises or crashes

  * Bug fixes:
    - fixed crash occurring on certain LSCP scripts (Bug 39)
    - another thread safety fix for lscp "load engine" and "set
      channel audio output device"

Version 0.4.0 (24 November 2006)

  * packaging changes:
    - changed deprecated copyright attribute to license; added ldconfig
      to post-(un)install steps; added devel package for liblinuxsampler;
      to linuxsampler.spec (RPM)
    - install necessary development header files for allowing 3rd party
      applications to link against liblinuxsampler